# advent-of-code

./: README.md  build.sbt
aoc2021-python/: puzzle01.py
aoc2021-scala/src/main/scala/: Puzzle03.scala
aoc2021_python/: puzzle01.py  puzzle02.py  puzzle03.py  pyproject.toml
aoc2021_scala/: build.sbt
aoc2021_scala/src/main/scala/: Puzzle01.scala  Puzzle02.scala
aoc2022-python/: puzzle01.py  puzzle02.py  puzzle03.py  puzzle04.py  puzzle05.py  puzzle07.py  puzzle08.py  puzzle09a.py  puzzle09b.py  puzzle10.py  pyproject.toml
aoc2022-scala/: build.sbt
aoc2022-scala/src/main/scala/: Puzzle06.scala  Puzzle11a.scala  Puzzle11b.scala
aoc2022_scala/src/main/scala/: Puzzle02.scala
python/: pyproject.toml
scala/src/main/scala/: Puzzle01.scala  Puzzle02.scala  Puzzle03.scala
src/main/scala/: Puzzle01.scala  Puzzle02.scala  Puzzle03.scala
