[tool.poetry]
name = "aoc2021_python"
version = "0.1.0"
description = ""
authors = ["Vicente Reyes-Puerta <vr.github@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
