[tool.poetry]
name = "aoc2022-python"
version = "0.1.0"
description = ""
authors = ["Vicente Reyes-Puerta <vr.github@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"

[tool.poetry.group.dev.dependencies]
black = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
